.collect(Collectors.toList()); -> .toList로 변경